# cargo-codesign-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: mdbook.yml  publish.yml  release-binary-assets.yml  release-plz.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/ci/: github-actions.md  secrets.md  workflow-generation.md
book/src/getting-started/: init.md  installation.md  status.md
book/src/linux/: credentials.md  overview.md
book/src/macos/: app-mode.md  auth-modes.md  bare-binary-mode.md  credentials.md  dmg-styling.md  overview.md  troubleshooting.md
book/src/reference/: cli.md  env-vars.md  exit-codes.md  sign-toml.md  verify.md
book/src/update-signing/: integration.md  keygen.md  signing.md
book/src/windows/: credentials.md  overview.md
src/: config.rs  discovery.rs  ds_store.rs  ds_store_old.rs  init.rs  keygen.rs  lib.rs  main.rs  manifest.rs  status.rs  subprocess.rs  update.rs  verify.rs  workflow.rs
src/config/: mod.rs  resolve.rs
src/ds_store/: alias.rs  allocator.rs  bookmark.rs  decode.rs  encode.rs  mod.rs  types.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/templates/: github-actions-linux.yml  github-actions-macos.yml  github-actions-windows.yml  github-actions-wrapper.yml
tests/: ci_generation.rs  config_parsing.rs  config_resolution.rs  discovery.rs  init_generate.rs  keygen.rs  manifest_parsing.rs  subprocess.rs  update_signing.rs  verify_update.rs  workflow_generation.rs
