[workspace]

[package]
name = "cargo-sign"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Cross-platform binary signing CLI for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/steganogram/cargo-sign"

[lib]
name = "cargo_sign"
path = "src/lib.rs"

[[bin]]
name = "cargo-sign"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
tempfile = "3"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
